fix content flickering when loading modal for the first time

--- a/site/css/modal.css
+++ b/site/css/modal.css
@@ -1,3 +1,7 @@
+[name="modal"] {
+	position: absolute;
+}
+
 .modal-outer {
 	position: fixed;
 	display: none;
